--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
     <h2 class="center">AUST civilians</h2>
-    <h3 class="center">A tribute to Late Prof.Dr. Mirjahan Sir</h3>
+    <h3 class="center">A tribute to Late Prof.Dr. Mirjahan Sir from Prarobdho 46</h3>
     <div class="options">
         <a href="teachers.html">Teachers Information</a>
         <a href="laboratories.html">Laboratory Information</a>
